# record_cam

./: CMakeLists.txt  record_cam.py
srcs/: record_cam.cpp
